--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "stage--",
-  "homepage": "https://basma123826.github.io/Comptable/",
+  "homepage": "https://basma123826.github.io/Comptable-Web",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "vite",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
