--- a/package.json
+++ b/package.json
@@ -22,3 +22,13 @@
     "vite": "^4.0.0"
   }
 }
+
+"homepage": "https://basma123826.github.io/Comptable-Web",
+"scripts": {
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
+}
